--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@ body {
   background-color: antiquewhite;
 }
 
-.js-movie-container {
-  width: 200px;
-  height: auto;
-}
+// .js-movie-container {
+//   width: 200px;
+//   height: auto;
+// }
